# MINTO-Public

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: _config.yml  _toc.yml  index.md  quickstart.ipynb  quickstart.md  what_is_minto.md
docs/api/: index.md
docs/en/: _config.yml  _toc.yml  environment_metadata_feature.md  faq.md  integration_guide.md  language.md  mental_model.md  quickstart.ipynb  task_completion_summary.md  user_guide.md
docs/en/_static/: language-switcher.js
docs/en/api/: index.md  logging_api.md  run_api.md
docs/en/concepts/: datastore.md  overview.md
docs/en/for_contributors/: new_data_schema.md
docs/en/migration/: v0tov1_migration.ipynb
docs/en/tutorials/: cvrp_model_benchmark.ipynb  data_access_tutorial.ipynb  github_push.ipynb  log_methods.ipynb  logging_tutorial.ipynb  minto_datastore.ipynb  mip_time.ipynb  qubo_parameter_search.ipynb  save_pull_push.ipynb
docs/en/usecases/: 01index.md  cvrp_model_benchmark.ipynb  mip_time.ipynb  openjij_temp_tuning.ipynb  qubo_parameter_search.ipynb
docs/ja/: _config.yml  _toc.yml  integration_guide.md  intro.md  language.md  logging_guide.md  mental_model.md  quickstart.ipynb  quickstart.md  user_guide.md
docs/ja/_static/: language-switcher.js
docs/ja/tutorials/: cvrp_model_benchmark.ipynb  data_access_tutorial.ipynb  github_push.ipynb  log_methods.ipynb  logging_tutorial.ipynb  minto_datastore.ipynb  mip_time.ipynb  openjij_temp_tuning.ipynb  qubo_parameter_search.ipynb  save_pull_push.ipynb
docs/ja/usecases/: 01index.md  cvrp_model_benchmark.ipynb  mip_time.ipynb  qubo_parameter_search.ipynb
docs/migration/: v0tov1_migration.ipynb
docs/overrides/: gen_ref_pages.py  home.html  main.html
docs/redirect/: index.html
docs/tutorials/: cvrp_model_benchmark.ipynb  github_push.ipynb  mip_time.ipynb  openjij_experiment.md  openjij_temp_tuning.ipynb  qubo_parameter_search.ipynb
minto/: __init__.py  environment.py  exception.py  experiment.py  logger.py  logging_config.py  run.py  sampleset_converter.py  table.py  utils.py
minto/exceptions/: __init__.py
minto/experiment/: experiment.py
minto/io/: load.py  save.py
minto/migrator/: __init__.py  v0tov1.py
minto/problems/: __init__.py  cvrp.py  knapsack.py  problem.py  tsp.py
minto/records/: sampleset_expansion.py
minto/table/: table.py
minto/v0/: __init__.py  typing.py
minto/v0/consts/: default.py
minto/v0/exceptions/: __init__.py  exceptions.py
minto/v0/experiment/: __init__.py  experiment.py
minto/v0/io/: __init__.py  load.py  save.py
minto/v0/records/: records.py  sampleset_expansion.py
minto/v0/table/: table.py
minto/v1/: datastore.py  exceptions.py  exp_dataspace.py  json_encoder.py
scripts/: build-docs.sh  jupytext-build.sh  simple-build.sh
tests/: conftest.py  helpers.py  test_dataspace.py  test_datastore.py  test_environment_metadata.py  test_experiment.py  test_global_interface.py  test_logging.py  test_new_explicit_interface.py  test_openjij_experiment.py  test_phase2_integration.py  test_table.py  test_v0v1migration.py  test_v1_data.py
tests/exp_data/scip_exp_20250112073656/experiment/: instances_reblock115.instance  meta_data_.json
tests/exp_data/scip_exp_20250112073656/runs/0/: meta_data_.json  parameters_.json  solutions_scip.solution
tests/exp_data/scip_exp_20250112073656/runs/1/: meta_data_.json  parameters_.json  solutions_scip.solution
tests/exp_data/scip_exp_20250112073656/runs/2/: meta_data_.json  parameters_.json  solutions_scip.solution
tests/exp_data/scip_exp_20250112073656/runs/3/: meta_data_.json  parameters_.json  solutions_scip.solution
tests/experiment/: test_get_table.py  test_log.py
tests/io/: config.toml  test_load.py  test_save.py
tests/records/: test_sampleset_expand.py
tests/table/: test_schema_based_table.py
tests/usecases/: test_usecase_tsp.py
